Truong Add CASIA-WebFace Link

--- a/CASIA-WebFace.ipynb
+++ b/CASIA-WebFace.ipynb
@@ -34,21 +34,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4iEidR1VZRoU",
-        "outputId": "90733f02-830f-4f6e-8ec0-1ce4eb1bdd11"
+        "outputId": "b5270163-6e00-4430-8a9a-3abe4c3ad398"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Files removed: 2 (38 kB)\n",
-            "Requirement already satisfied: pip in /usr/local/lib/python3.12/dist-packages (25.3)\n"
+            "\u001b[33mWARNING: No matching packages\u001b[0m\u001b[33m\n",
+            "\u001b[0mFiles removed: 0\n",
+            "Requirement already satisfied: pip in /usr/local/lib/python3.12/dist-packages (24.1.2)\n",
+            "Collecting pip\n",
+            "  Downloading pip-25.3-py3-none-any.whl.metadata (4.7 kB)\n",
+            "Downloading pip-25.3-py3-none-any.whl (1.8 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m21.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pip\n",
+            "  Attempting uninstall: pip\n",
+            "    Found existing installation: pip 24.1.2\n",
+            "    Uninstalling pip-24.1.2:\n",
+            "      Successfully uninstalled pip-24.1.2\n",
+            "Successfully installed pip-25.3\n"
           ]
         }
       ],
@@ -64,23 +75,27 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         },
         "id": "6yPqN0-6aPoQ",
-        "outputId": "f5b2f2fd-b1f2-4520-89f8-4be90575c828"
+        "outputId": "c4af454c-c77f-4a54-a7c0-b79efe390b7f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: mxnet in /usr/local/lib/python3.12/dist-packages (1.9.1)\n",
+            "Collecting mxnet\n",
+            "  Downloading mxnet-1.9.1-py3-none-manylinux2014_x86_64.whl.metadata (3.4 kB)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.12/dist-packages (3.10.0)\n",
             "Requirement already satisfied: kagglehub in /usr/local/lib/python3.12/dist-packages (0.3.13)\n",
-            "Requirement already satisfied: numpy<2.0.0,>1.16.0 in /usr/local/lib/python3.12/dist-packages (from mxnet) (1.26.4)\n",
+            "Collecting numpy<2.0.0,>1.16.0 (from mxnet)\n",
+            "  Downloading numpy-1.26.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (61 kB)\n",
             "Requirement already satisfied: requests<3,>=2.20.0 in /usr/local/lib/python3.12/dist-packages (from mxnet) (2.32.4)\n",
-            "Requirement already satisfied: graphviz<0.9.0,>=0.8.1 in /usr/local/lib/python3.12/dist-packages (from mxnet) (0.8.4)\n",
+            "Collecting graphviz<0.9.0,>=0.8.1 (from mxnet)\n",
+            "  Downloading graphviz-0.8.4-py2.py3-none-any.whl.metadata (6.4 kB)\n",
             "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.20.0->mxnet) (3.4.4)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.20.0->mxnet) (3.11)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.20.0->mxnet) (2.5.0)\n",
@@ -95,8 +110,49 @@
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (2.9.0.post0)\n",
             "Requirement already satisfied: pyyaml in /usr/local/lib/python3.12/dist-packages (from kagglehub) (6.0.3)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from kagglehub) (4.67.1)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
+            "Downloading mxnet-1.9.1-py3-none-manylinux2014_x86_64.whl (49.1 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.1/49.1 MB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m  \u001b[33m0:00:08\u001b[0m\n",
+            "\u001b[?25hDownloading graphviz-0.8.4-py2.py3-none-any.whl (16 kB)\n",
+            "Downloading numpy-1.26.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.0 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.0/18.0 MB\u001b[0m \u001b[31m112.2 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: numpy, graphviz, mxnet\n",
+            "\u001b[2K  Attempting uninstall: numpy\n",
+            "\u001b[2K    Found existing installation: numpy 2.0.2\n",
+            "\u001b[2K    Uninstalling numpy-2.0.2:\n",
+            "\u001b[2K      Successfully uninstalled numpy-2.0.2\n",
+            "\u001b[2K  Attempting uninstall: graphviz\n",
+            "\u001b[2K    Found existing installation: graphviz 0.21\n",
+            "\u001b[2K    Uninstalling graphviz-0.21:\n",
+            "\u001b[2K      Successfully uninstalled graphviz-0.21\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3/3\u001b[0m [mxnet]\n",
+            "\u001b[1A\u001b[2K\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "shap 0.50.0 requires numpy>=2, but you have numpy 1.26.4 which is incompatible.\n",
+            "tobler 0.13.0 requires numpy>=2.0, but you have numpy 1.26.4 which is incompatible.\n",
+            "google-adk 1.21.0 requires graphviz<1.0.0,>=0.20.2, but you have graphviz 0.8.4 which is incompatible.\n",
+            "jax 0.7.2 requires numpy>=2.0, but you have numpy 1.26.4 which is incompatible.\n",
+            "rasterio 1.5.0 requires numpy>=2, but you have numpy 1.26.4 which is incompatible.\n",
+            "jaxlib 0.7.2 requires numpy>=2.0, but you have numpy 1.26.4 which is incompatible.\n",
+            "pytensor 2.36.3 requires numpy>=2.0, but you have numpy 1.26.4 which is incompatible.\n",
+            "opencv-contrib-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\n",
+            "opencv-python-headless 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\n",
+            "opencv-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed graphviz-0.8.4 mxnet-1.9.1 numpy-1.26.4\n"
           ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "numpy"
+                ]
+              },
+              "id": "677afd55c0f8448ab6ff65ef6f4bc606"
+            }
+          },
+          "metadata": {}
         }
       ]
     },
@@ -124,9 +180,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aLmr3XXVae3N",
-        "outputId": "664ae050-9af2-4b2c-bff0-843ae1313fc5"
+        "outputId": "db92d976-de4e-493c-8975-5bd2059813ef"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,9 +207,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aAdEqmlBaqIn",
-        "outputId": "ba744ee4-19a8-4980-914c-ebbb61044093"
+        "outputId": "ab339d3d-46ef-457b-fbec-775c4eca8a6c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +240,7 @@
       "metadata": {
         "id": "51ZQHRVtjVdo"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,9 +277,9 @@
           "height": 617
         },
         "id": "OlH1ZhBSbFdq",
-        "outputId": "dc78cee0-732e-482a-e13a-200334b8e398"
+        "outputId": "06000ea4-ca4f-48bf-f95a-0057afb8ae29"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -288,9 +344,9 @@
           "height": 1000
         },
         "id": "mVIC6N64bSkd",
-        "outputId": "f8b9fa68-b9ee-4610-dacf-c41d52ca5c1e"
+        "outputId": "83f2e06a-14d3-4930-d540-d84221fa690a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -410,7 +466,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dc965ba5",
-        "outputId": "80c4407a-7cd9-4b55-c2c6-84e49f42b43b"
+        "outputId": "1dfaf07f-d8c9-4c64-bc92-14e3c5dce26f"
       },
       "source": [
         "import os\n",
@@ -425,7 +481,7 @@
         "os.makedirs(subdirectory_name, exist_ok=True)\n",
         "print(f\"Subdirectory '{subdirectory_name}' ensured to exist.\")"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,13 +500,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d53d97bf",
-        "outputId": "38012733-4082-4b83-ad0a-c0f1e04dc69a"
+        "outputId": "8d28566e-13d5-4128-9029-219a1605817e"
       },
       "source": [
         "import random\n",
-        "\n",
-        "# Đặt seed cho bộ tạo số ngẫu nhiên để đảm bảo tính tái lập\n",
-        "random.seed(57)\n",
         "\n",
         "# Theo hướng dẫn trên Kaggle\n",
         "total_images = 409623\n",
@@ -458,23 +511,18 @@
         "# Số lượng ảnh mong muốn\n",
         "num_images_to_extract = 10000\n",
         "\n",
-        "# Tạo danh sách tất cả các chỉ mục có thể (dựa trên 1 cho recordio)\n",
-        "all_indices = list(range(1, total_images + 1))\n",
+        "# Lấy 10.000 chỉ mục đầu tiên\n",
+        "indices = list(range(1, num_images_to_extract + 1))\n",
         "\n",
-        "# Chọn ngẫu nhiên 10.000 chỉ mục duy nhất\n",
-        "random_indices = random.sample(all_indices, num_images_to_extract)\n",
-        "\n",
-        "print(f\"Generated {len(random_indices)} unique random indices for image extraction.\")\n",
-        "print(f\"First 10 random indices: {random_indices[:10]}\")"
+        "print(f\"Generated {len(indices)} sequential indices for image extraction.\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Generated 10000 unique random indices for image extraction.\n",
-            "First 10 random indices: [22317, 192809, 309166, 317349, 10125, 117890, 269551, 168412, 250274, 152173]\n"
+            "Generated 10000 sequential indices for image extraction.\n"
           ]
         }
       ]
@@ -486,7 +534,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e63ed7a0",
-        "outputId": "a832e66b-031f-4f7e-e237-8f8200a67fea"
+        "outputId": "47657d7e-7a9e-4cd4-b72c-0983056bdb12"
       },
       "source": [
         "import cv2 # Sử dụng opencv-python để lưu ảnh\n",
@@ -496,11 +544,9 @@
         "labels = []\n",
         "skipped_indices = []\n",
         "\n",
-        "# subdirectory_name đã được định nghĩa là 'CASIA-WebFace-10K/extracted_images'\n",
+        "print(f\"Starting extraction of {len(indices)} images...\")\n",
         "\n",
-        "print(f\"Starting extraction of {len(random_indices)} images...\")\n",
-        "\n",
-        "for i, index in enumerate(random_indices):\n",
+        "for i, index in enumerate(indices):\n",
         "    try:\n",
         "        # Đọc bản ghi cho chỉ mục ngẫu nhiên hiện tại (recordio dựa trên 1)\n",
         "        header, s = recordio.unpack(imgrec.read_idx(index))\n",
@@ -526,7 +572,7 @@
         "        labels.append(int(header.label))\n",
         "\n",
         "        if (i + 1) % 1000 == 0:\n",
-        "            print(f\"Extracted {len(image_paths)}/{len(random_indices)} images.\")\n",
+        "            print(f\"Extracted {len(image_paths)}/{len(indices)} images.\")\n",
         "\n",
         "    except Exception as e:\n",
         "        print(f\"Error processing record at original index {index} (extracted sequence {i}): {e}. Skipping this image.\")\n",
@@ -546,7 +592,7 @@
         "\n",
         "print(f\"Saved labels to '{csv_filepath}'.\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +623,7 @@
           "height": 34
         },
         "id": "df74755a",
-        "outputId": "cc76955c-31da-4455-ec1f-de6ce65ffe6e"
+        "outputId": "c0cdd71a-8488-428b-d086-16c0f442235f"
       },
       "source": [
         "import shutil\n",
@@ -586,7 +632,11 @@
         "\n",
         "# Nén thư mục 'CASIA-WebFace-10K' vào một tệp zip\n",
         "output_filename = 'CASIA-WebFace-10K_archive'\n",
-        "zip_file_path = shutil.make_archive(output_filename, 'zip', main_directory_name)\n",
+        "\n",
+        "# Thay đổi cách gọi make_archive để bao gồm thư mục gốc trong tệp zip\n",
+        "# root_dir là thư mục mà từ đó sẽ bắt đầu nén (thư mục hiện tại: /content)\n",
+        "# base_dir là thư mục con bên trong root_dir muốn nén\n",
+        "zip_file_path = shutil.make_archive(output_filename, 'zip', root_dir=os.getcwd(), base_dir=main_directory_name)\n",
         "\n",
         "print(f\"Created zip file: {zip_file_path}\")\n",
         "\n",
@@ -594,9 +644,9 @@
         "try:\n",
         "  files.download(zip_file_path)\n",
         "except Exception as e:\n",
-        "  print(f\"Error during download: {e}. You can manually download the file '{zip_file_path}' from the files panel.\")\n"
+        "  print(f\"Error during download: {e}. You can manually download the file '{zip_file_path}' from the files panel.\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -664,12 +714,21 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_56208a6a-36c2-4f7e-a9b1-306d63af963d\", \"CASIA-WebFace-10K_archive.zip\", 54754313)"
+              "download(\"download_ba1ea833-1666-4aca-8828-c0ae43872576\", \"CASIA-WebFace-10K_archive.zip\", 54358068)"
             ]
           },
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yO3j9eXGVJoC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
